--- a/src/sass/base/_normalize.scss
+++ b/src/sass/base/_normalize.scss
@@ -3,3 +3,57 @@
    padding: 0px;
    box-sizing: border-box;
  }
+
+ body {
+font-family: Oswald;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%; /* 20px */
+letter-spacing: 1px;
+ }
+
+ .container {
+  width: 1024px;
+  margin: auto;
+ }
+
+ input,
+button {
+  border: none;
+  font-family: inherit;
+}
+
+button,
+input[type="submit"] {
+  cursor: pointer;
+  background: none;
+}
+
+input:focus,
+button:focus {
+  outline: none;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+h1 {
+font-family: Oswald;
+font-size: 46px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%; /* 46px */
+letter-spacing: 2.76px;
+}
+
+h3{
+  font-family: Oswald;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 4.32px;
+}
