--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,4 @@
-*{margin:0px;padding:0px;box-sizing:border-box}
+@import './sass/base/normalize';
+@import './sass/header';
+@import './sass/footer';
+@import './sass/mainpage';
