--- a/src/sass/base/_normalize.scss
+++ b/src/sass/base/_normalize.scss
@@ -35,7 +35,12 @@ button:focus {
   outline: none;
 }
 
+input {
+  cursor: pointer;
+}
+
 a{
+  cursor: pointer;
   text-decoration: none;
   color: black;
 }
