feat: create Authorization Создание авторизации

--- a/src/style.scss
+++ b/src/style.scss
@@ -2,3 +2,5 @@
 @import './sass/header';
 @import './sass/footer';
 @import './sass/mainpage';
+@import './sass/authorization';
+@import './sass/account';
