--- a/src/style.scss
+++ b/src/style.scss
@@ -4,4 +4,6 @@
 @import './sass/mainpage';
 @import './sass/authorization';
 @import './sass/account';
+@import './sass/card';
 @import './sass/catalog';
+@import './sass/testdrive';
