--- a/src/sass/_catalog.scss
+++ b/src/sass/_catalog.scss
@@ -1,23 +1,27 @@
-.cart-img{
+.cart-img {
    width: 200px;
    height: 200px;
 }
-.cart__cars{
+
+.cart__cars {
    display: flex;
    flex-direction: column;
    // justify-content: space-between;
    align-items: center;
 }
-.cart-name{
+
+.cart-name {
    width: 200px;
    text-align: center;
    margin-top: 10px;
    height: 50px;
 }
-.cart-price{
+
+.cart-price {
    font-size: 17px;
 }
-.cart-btn{
+
+.cart-btn {
    width: 170px;
    height: 33px;
    padding: 8px 42px;
@@ -27,19 +31,22 @@
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
-   line-height: 100%; /* 16px */
+   line-height: 100%;
+   /* 16px */
    letter-spacing: 0.8px;
    background-color: #851E21;
    border-radius: 20px;
    margin-top: 10px;
 }
-.cart{
+
+.cart {
    padding: 20px;
    margin: 50px;
    height: 350px;
    background: white;
 }
-.cart__cars-inner{
+
+.cart__cars-inner {
    display: flex;
    flex-wrap: wrap;
 }
@@ -49,11 +56,43 @@
 
 
 //catalog
-.catalog{
+.catalog {
    background: black;
 }
-.catalog__title{
+
+.catalog__title {
    color: white;
    padding-top: 30px;
 
+}
+
+.catalog__sort {
+   background: transparent;
+   background-image: url('../assets/sort.svg');
+   width: 32px;
+   height: 32px;
+   border: none;
+}
+
+.catalog__button {
+   background: #851E21;
+   border-radius: 100px;
+   padding: 10px 20px;
+   color: white;
+   margin: 5px;
+
+   &:hover {
+      background: black;
+      border: 1px solid #851E21;
+   }
+}
+
+.active {
+   background: black;
+   border: 1px solid #851E21;
+}
+
+.catalog__buttons {
+   display: flex;
+   align-items: center;
 }
